--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Dan & Frances getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="gib.jpg">
+    <meta property="og:image" content="img/picnic.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>We are getting married!</h3>
-                <p>The date is 23<sup>th</sup> October 2021 and we would love you to attend.</p>
+                <p>The date is 23<sup>rd</sup> October 2021 and we would love you to attend.</p>
                 <div class="share-bar"></div>
             </div>
         </div>
@@ -114,8 +114,8 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.jpg" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/dan_left.jpg" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/frances_right.jpg" class="wp9"></div>
         </div>
     </div>
 </section>
@@ -157,7 +157,7 @@
         <div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
-                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Menu
+                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Gifts
                 </a>
             </div>
         </div>
@@ -173,38 +173,24 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
-                    <h3 class="text-center section-padding">Ugh... Menus?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h3 class="text-center section-padding">About gifts..</h3>
                     <p>
-                        <strong>Ethnic indian wear</strong>
-                        <br>
-                        Ladies can wear something
-                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
-                        and gentlemen can be on
-                        their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
-                        kurtas</a> with pants or pyjamas along with an optional shawl.
+                        Can't wait to see your smiling faces <br>
+                        When we celebrate our wedding day <br>
+                        It's great that you will be there <br>
+                        And we'd just like to say
                     </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
                     <p>
-                        <strong>Western attire</strong>
-                        <br>
-                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
-                        to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
+                        Don't stress about a present <br>
+                        Because we know how difficult it can be <br>
+                        It's you, our friends and family <br>
+                        We really want to see
                     </p>
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
                     <p>
-                        <strong>Indo-western</strong>
-                        <br>
-                        Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
-                        dresses and the list
-                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
-                        suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
-                        (band gala) waistcoat & shirt</a> combo.
+                        But if you'd like to give us something <br>
+                        (And please don't think we're crass) <br>
+                        We'd love to go on honeymoon <br>
+                        If you could gift us a little cash
                     </p>
                 </div>
             </div><!-- /.modal-content -->
@@ -325,7 +311,7 @@
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
+                               href="https://m.uber.com/ul/?action=setPickup&client_id=boWuCUT1FfZyr5KVqTXevRvX1V3NvQif&pickup=my_location&dropoff[formatted_address]=Orsett%20Hall%20Essex%20UK&dropoff[latitude]=51.5156082&dropoff[longitude]=0.3751167"><i
                                     class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
@@ -384,10 +370,8 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
-                                                                  max="4"
-                                                                  placeholder="Husband/Wife or kids"
-                                                                  required>
+                                <i class="fa fa-info"></i><input type="notes" name="extras" class=""
+                                                                  placeholder="Dietery requirements">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
@@ -433,7 +417,7 @@
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfASTXqLk9GtCNt-4D-a9RlfguahZ0pao&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
