--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <p><strong>Evening</strong></p>
 
                     <h5>Live Music <span class="time">6PM-8PM</span></h5>
-                    <p>Motown hits performed by 12 piece band "All that Soul" feauring our first dance.</p>
+                    <p>Motown hits performed by 12 piece band "All that Soul" featuring our first dance.</p>
                 </div>
                 <div class="wp6">
                     <h5>Disco <span class="time">6PM-12AM</span></h5>
