--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-info"></i><input type="notes" name="extras" class=""
-                                                                  placeholder="Dietery requirements">
+                                                                  placeholder="Dietary requirements">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
