--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">Our story</a></li>
+                            <li><a href="#intro">Latest update</a></li>
                             <li><a href="#events">The event</a></li>
                             <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
@@ -101,14 +101,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Our story so far</h3>
+                <h3 class="header">Latest update</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    We began dating in 2019. When the pandemic began in 2020, Frances moved to Croydon to infect Dan's life!
+                    We will keep you up to date with the latest developments here!
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.jpg" class="wp2"></div>
