--- a/index.html
+++ b/index.html
@@ -132,12 +132,15 @@
                 <div class="wp3">
                     <p><strong>Daytime</strong></p>
 
+                    <h5>Arrival <span class="time">12PM - 12:30PM</span></h5>
+                    <p>Arrive at Orsett hall.</p>
+
                     <h5>Ceremony <span class="time">1PM - 3PM</span></h5>
-                    <p>Arrive at ? to Orsett hall, where the ceremony will take place in the chapel.</p>
+                    <p>Ceremony will take place in the chapel.</p>
                 </div>
                 <div class="wp5">
                     <h5>Wedding Breakfast <span class="time">3PM - 6PM</span></h5>
-                    <p>Food drink and speeches</p>
+                    <p>Food, drink and speeches</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
