add rsvp options

--- a/index.html
+++ b/index.html
@@ -386,6 +386,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="attending">I'll be there!
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="evening-only">I'll join the party later (Evening only)!
+                      </label>
+                    </div>
+                    <div class="form-check disabled">
+                      <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="not-attending">I can't make it :(
+                      </label>
+                    </div>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
