--- a/index.html
+++ b/index.html
@@ -388,17 +388,17 @@
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending">I'll be there!
+                        <input type="radio" class="form-check-input" name="attending" value="yes">I'll be there!
                       </label>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="evening-only">I'll join the party later (Evening only)!
+                        <input type="radio" class="form-check-input" name="attending" value="evening">I'll join the party later (Evening only)!
                       </label>
                     </div>
                     <div class="form-check disabled">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="not-attending">I can't make it :(
+                        <input type="radio" class="form-check-input" name="attending" value="no">I can't make it :(
                       </label>
                     </div>
                     <div class="row">
