changed some pics

--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
                     We will keep you up to date with the latest developments here!
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.png" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/dan_left.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/frances_right.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/dan_left.png" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/frances_right.png" class="wp9"></div>
         </div>
     </div>
 </section>
