--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <input type="radio" class="form-check-input" name="attending" value="evening">I'll join the party later (Evening only)!
                       </label>
                     </div>
-                    <div class="form-check disabled">
+                    <div class="form-check">
                       <label class="form-check-label">
                         <input type="radio" class="form-check-input" name="attending" value="no">I can't make it :(
                       </label>
