--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+All That Soul<!doctype html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>
@@ -132,26 +132,26 @@
                 <div class="wp3">
                     <p><strong>Daytime</strong></p>
 
-                    <h5>Arrival <span class="time">12PM - 12:30PM</span></h5>
-                    <p>Arrive at Orsett hall.</p>
+                    <h5>Arrival <span class="time">12 PM - 12:30 PM</span></h5>
+                    <p>Arrive at Orsett Hall.</p>
 
-                    <h5>Ceremony <span class="time">1PM - 3PM</span></h5>
-                    <p>Ceremony will take place in the chapel.</p>
+                    <h5>Ceremony <span class="time">1 PM - 3 PM</span></h5>
+                    <p>Ceremony will take place in the Chapel.</p>
                 </div>
                 <div class="wp5">
-                    <h5>Wedding Breakfast <span class="time">3PM - 6PM</span></h5>
-                    <p>Food, drink and speeches</p>
+                    <h5>Wedding Reception <span class="time">3 PM - 6 PM</span></h5>
+                    <p>Wedding Breakfast, Speeches and Toasts.</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <p><strong>Evening</strong></p>
 
-                    <h5>Live Music <span class="time">6PM-8PM</span></h5>
-                    <p>Motown hits performed by 12 piece band "All that Soul" featuring our first dance.</p>
+                    <h5>Live Music <span class="time">6 PM - 8 PM</span></h5>
+                    <p>Motown hits performed by 12 piece band "All that Soul" - featuring our first dance.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Disco <span class="time">6PM-12AM</span></h5>
+                    <h5>Disco <span class="time">6 PM - 12 AM</span></h5>
                     <p>For those whose want to continue the party late into the evening (expect to hear some Kylie!).
                       Send Frances your requests!!</p>
                 </div>
@@ -308,7 +308,7 @@
                         <div class="col-md-6">
                             <h5>Contact to book a room</h5>
                             <p><i class="phone"></i> <a href="+44 (0) 1375 891402">+44 (0) 1375 891402</a><br>
-                                <i class="email"></i> <a href="reception@orsetthall.co.uk">reception@orsetthall.co.uk</a></p>
+                                <i class="email"></i> <a href="reception@orsetthall.co.uk">reception@orsettHall.co.uk</a></p>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -350,23 +350,23 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 6th September 2021</p>
+                <p>We would greatly appreciate it if you could RSVP before 6th September 2021</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
-                                                                     required>
+                                <i class="fa fa-user"></i><input name="name" class=""
+                                                                 placeholder="Your name/s"
+                                                                 required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name"
-                                                                 required>
+                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
+                                                                     placeholder="Your email"
+                                                                     required>
                             </div>
                         </div>
                     </div>
@@ -396,25 +396,24 @@
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="yes"> I'll be there!
+                        <input type="radio" class="form-check-input" name="attending" value="yes"> I/We will be there!
                       </label>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="evening"> I'll join the party later (Evening only)!
+                        <input type="radio" class="form-check-input" name="attending" value="evening"> I/We will join the party later (Evening only)!
                       </label>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="no"> I can't make it :(
+                        <input type="radio" class="form-check-input" name="attending" value="no"> I/We can't make it :(
                       </label>
                     </div>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Yes,
-                        that's me!
+                        SUBMIT
                     </button>
                 </form>
             </div>
