--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-All That Soul<!doctype html>
+<!doctype html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>
