--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0" nonce="DzkEzZZX"></script>
 <section class="hero">
     <section class="navigation">
         <header>
@@ -91,7 +93,7 @@
             <div class="col-md-12 text-center">
                 <h3>We are getting married!</h3>
                 <p>The date is 23<sup>rd</sup> October 2021 and we would love you to attend.</p>
-                <div class="share-bar"></div>
+                <div class="fb-like" data-href="https://www.danandfrances.co.uk/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
             </div>
         </div>
     </div>
