--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate it if you could RSVP before 6th September 2021</p>
+                <p>We would greatly appreciate it if you could RSVP before 17th July 2021</p>
+                <p>(Please complete the form once for each guest)</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -360,7 +361,7 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name/s"
+                                                                 placeholder="Your name"
                                                                  required>
                             </div>
                         </div>
