--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
                 <p>We would greatly appreciate it if you could RSVP before 17th July 2021</p>
-                <p>(Please complete the form once for each guest)</p>
+                <p><strong>(Please complete the form once for each guest)</strong></p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -399,17 +399,17 @@
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="yes"> I/We will be there!
+                        <input type="radio" class="form-check-input" name="attending" value="yes"> I will be there!
                       </label>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="evening"> I/We will join the party later (Evening only)!
+                        <input type="radio" class="form-check-input" name="attending" value="evening"> I will join the party later (Evening only)!
                       </label>
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="attending" value="no"> I/We can't make it :(
+                        <input type="radio" class="form-check-input" name="attending" value="no"> I can't make it :(
                       </label>
                     </div>
                     <div class="row">
