add travel-lodge info

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 <div class="wp4">
                     <p><strong>Evening</strong></p>
 
-                    <h5>Live Music <span class="time">6 PM - 8 PM</span></h5>
+                    <h5>Live Music <span class="time">7 PM - 9 PM</span></h5>
                     <p>Motown hits performed by 12 piece band "All that Soul" - featuring our first dance.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Disco <span class="time">6 PM - 12 AM</span></h5>
+                    <h5>Disco <span class="time">9 PM - 12 AM</span></h5>
                     <p>For those whose want to continue the party late into the evening (expect to hear some Kylie!).
                       Send Frances your requests!!</p>
                 </div>
@@ -322,6 +322,13 @@
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
                                 map</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Alternative Accommodation</h5>
+                            <p>Travelodge, Arterial Road, East Horndon, CM13 3LL<br>
+                            <i class="phone"></i> <a href="+44 (0) 871 984 8484">+44 (0) 871 984 8484</a></p>
                         </div>
                     </div>
                 </div>
