--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    We will keep you up to date with the latest developments here!
+                    Day guests please aim to arrive between 12 (midday) and 12:30. Please feel free to bring confetti with you.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.png" class="wp2"></div>
