--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                            <li><a href="https://event.lovecastapp.com/event/BcfEIBjLTsAqBfkbJ6IP" class="btn-white btn-small">Watch the Ceremony Live!</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -79,8 +79,8 @@
         </div>
         <div class="row">
             <div class="col-sm-4 hidden-xs"></div>
-            <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
+            <div class="col-sm-4 hidden-xs text-center"><a href="https://event.lovecastapp.com/event/BcfEIBjLTsAqBfkbJ6IP"
+                                                           class="btn btn-accent btn-large rsvp-btn">Livestream</a></div>
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
@@ -108,6 +108,11 @@
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.png" class="wp1"></div>
+            <div class="col-md-6">
+                <p>
+                   For those that are not able to attend the ceremony, you can watch a live stream of the ceremony <a href="https://event.lovecastapp.com/event/BcfEIBjLTsAqBfkbJ6IP">here!</a>
+                </p>
+            </div>
             <div class="col-md-6">
                 <p>
                     Day guests please aim to arrive between 12 (midday) and 12:30. Please feel free to bring confetti with you.
