make text readable

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/dan_left.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                   For those that are not able to attend the ceremony, you can watch a live stream of the ceremony <a href="https://event.lovecastapp.com/event/BcfEIBjLTsAqBfkbJ6IP">here!</a>
+                   <strong>For those that are not able to attend the ceremony, you can watch a live stream of the ceremony <a href="https://event.lovecastapp.com/event/BcfEIBjLTsAqBfkbJ6IP">here!</a></strong>
                 </p>
             </div>
             <div class="col-md-6">
                 <p>
-                    Day guests please aim to arrive between 12 (midday) and 12:30. Please feel free to bring confetti with you.
+                    <strong>Day guests please aim to arrive between 12 (midday) and 12:30. Please feel free to bring confetti with you.</strong>
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/frances_right.png" class="wp2"></div>
